[1.9] Issue 5072 (Panel Option Menus are aligned left-to-right in a right-to-left localized Firefox) http://code.google.com/p/fbug/issues/detail?id=5072
http://code.google.com/p/fbug/source/detail?r=12594

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -179,6 +179,10 @@ panelTab[selected="true"]:hover > panelTabMenu .menuTarget {
     background: url(chrome://firebug/skin/tabMenuTargetHover.png) no-repeat center;
 }
 
+panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
+    direction: rtl;
+}
+
 /************************************************************************************************/
 /* Detached Firebug Window */
 
